# Task-Automation-Studio

./: .gitignore  README.md  Task-Automation-Studio 1.0.0.spec  pyproject.toml
docs/: requirements-execution-spec.md  user-guide-ar.md
docs/design/: 01-architecture-overview.md  02-workflow-dsl.md  03-teach-session-and-replay.md  04-implementation-workflow.md  README.md
docs/design/examples/: zoom_signup.workflow.json
docs/design/schemas/: teach-session.schema.json  workflow.schema.json
scripts/: build_windows.ps1
src/task_automation_studio/: __init__.py  app.py  desktop_entry.py
src/task_automation_studio/config/: settings.py
src/task_automation_studio/connectors/: __init__.py  browser_connector.py  email_connector.py  excel_connector.py
src/task_automation_studio/core/: __init__.py  agent_models.py  engine.py  enums.py  errors.py  interfaces.py  models.py  teach_models.py
src/task_automation_studio/persistence/: database.py  models.py  repository.py  teach_repository.py
src/task_automation_studio/services/: agent_planner.py  agent_runtime.py  agent_skills.py  auto_recorder.py  executors.py  job_orchestrator.py  runner.py  session_compiler.py  session_replay.py  smart_locator.py  teach_sessions.py
src/task_automation_studio/ui/: main_window.py
src/task_automation_studio/utils/: security.py  (+1 more)
tests/: test_agent_planner.py  test_agent_runtime.py  test_app_cli.py  test_auto_recorder.py  test_engine.py  test_models.py  test_runner.py  test_session_compiler.py  test_session_replay.py  test_smart_locator.py  test_teach_sessions.py  test_workflow_loader.py
(+4 files in other folders)
