[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-automation-studio"
version = "0.1.0"
description = "High-accuracy desktop automation platform for repetitive business workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Task Automation Team" }]
dependencies = [
  "pydantic>=2.7,<3",
  "pandas>=2.2,<3",
  "openpyxl>=3.1,<4",
  "sqlalchemy>=2.0,<3",
  "tenacity>=9.0,<10",
  "playwright>=1.50,<2",
  "PySide6>=6.7,<7",
  "keyring>=25,<26",
  "pynput>=1.7,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
]

[project.scripts]
tas = "task_automation_studio.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
